--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,6 @@
         <item name="colorPrimary">@color/dark_primary</item>
         <item name="colorOnPrimary">@color/dark_text</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/dark_primary</item>
-        <item name="android:windowAnimationStyle">@style/FadeAnimation</item>
+        <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
     </style>
 </resources>
