--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,9 @@
     
     <style name="MyEditText" parent="Widget.AppCompat.EditText">
         <item name="backgroundTint">@color/dark_icon</item>
-        <item name="singleLine">true</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:inputType">text</item>
+        <item name="android:ellipsize">end</item>
         <item name="android:textColor">@color/dark_text</item>
         <item name="android:textCursorDrawable">@drawable/cursor_edittext</item>
     </style>
