--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:layout_marginTop="20dp"
+        android:weightSum="2">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="30dp">
+            android:layout_marginStart="30dp"
+            android:layout_weight="1">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -38,6 +41,14 @@
                 android:textSize="@dimen/text_normal"
                 tools:ignore="HardcodedText" />
         </LinearLayout>
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animationView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:lottie_autoPlay="true"
+            app:lottie_rawRes="@raw/medical_shield"
+            app:lottie_loop="true"
+            android:layout_weight="1"/>
     </LinearLayout>
 
     <LinearLayout
@@ -62,7 +73,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_centerInParent="true"
-                    android:layout_marginHorizontal="30dp"
+                    android:layout_marginHorizontal="15dp"
                     android:layout_marginVertical="10dp"
                     android:src="@drawable/ic_search" />
 
@@ -74,21 +85,22 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
-        android:weightSum="2"
-        android:orientation="vertical">
+        android:weightSum="2">
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:weightSum="2"
-            tools:ignore="NestedWeights">
+            tools:ignore="NestedWeights"
+            android:orientation="vertical">
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_drug"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 app:cardCornerRadius="15dp"
-                android:layout_margin="20dp">
+                android:layout_margin="20dp"
+                android:visibility="invisible">
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -96,45 +108,49 @@
                     android:scaleType="centerCrop"/>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
-                android:id="@+id/card_drugstore"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:cardCornerRadius="15dp"
-                android:layout_margin="20dp">
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/card_drugstore"
-                    android:scaleType="centerCrop"/>
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:weightSum="2"
-            tools:ignore="NestedWeights">
-            <androidx.cardview.widget.CardView
                 android:id="@+id/card_bill"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 app:cardCornerRadius="15dp"
-                android:layout_margin="20dp">
+                android:layout_margin="20dp"
+                android:visibility="invisible">
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@drawable/card_bill"
                     android:scaleType="centerCrop"/>
             </androidx.cardview.widget.CardView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:weightSum="2"
+            tools:ignore="NestedWeights"
+            android:orientation="vertical">
             <androidx.cardview.widget.CardView
-                android:id="@+id/card_statistic"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:id="@+id/card_drugstore"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 app:cardCornerRadius="15dp"
-                android:layout_margin="20dp">
+                android:layout_margin="20dp"
+                android:visibility="invisible">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/card_drugstore"
+                    android:scaleType="centerCrop"/>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_statistic"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                app:cardCornerRadius="15dp"
+                android:layout_margin="20dp"
+                android:visibility="invisible">
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
