--- a/app/src/main/res/layout/activity_statistic.xml
+++ b/app/src/main/res/layout/activity_statistic.xml
@@ -37,11 +37,13 @@
         android:layout_marginHorizontal="40dp"
         android:paddingHorizontal="15dp"
         android:background="@drawable/round_card_light_background">
+
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"/>
+            android:layout_marginVertical="10dp"
+            android:spinnerMode="dialog"/>
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,8 +60,8 @@
             android:id="@+id/list_item"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginVertical="15dp"
-            android:layout_above="@+id/line"/>
+            android:layout_above="@+id/line"
+            android:layout_marginVertical="15dp" />
         <LinearLayout
             android:id="@+id/line"
             android:layout_width="match_parent"
