--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:textColor="@color/dark_text"
     android:textSize="@dimen/text_normal"
-    android:layout_margin="5dp"
+    android:padding="5dp"
     android:maxLines="1"
     android:ellipsize="end">
 </TextView>
