--- a/app/src/main/res/layout/item_drugstore.xml
+++ b/app/src/main/res/layout/item_drugstore.xml
@@ -11,31 +11,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/card_background">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:layout_toStartOf="@+id/card_update"
-            android:orientation="vertical"
-            android:layout_margin="8dp">
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/txt_drugstore_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:text="Pharmacity"
-                tools:ignore="HardcodedText"
                 android:textColor="@color/dark_text"
                 android:textSize="@dimen/text_normal"
-                android:ellipsize="end" />
+                tools:ignore="HardcodedText" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
                 android:paddingHorizontal="20dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/address_"
-                    android:textSize="@dimen/text_small"/>
+                    android:textSize="@dimen/text_small" />
+
                 <TextView
                     android:id="@+id/txt_address"
                     android:layout_width="wrap_content"
@@ -46,14 +51,16 @@
                     tools:ignore="HardcodedText" />
             </LinearLayout>
         </LinearLayout>
+
         <androidx.cardview.widget.CardView
             android:id="@+id/card_update"
-            app:cardBackgroundColor="@color/dark_primary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_margin="10dp"
+            app:cardBackgroundColor="@color/dark_primary"
             app:cardCornerRadius="22dp">
+
             <ImageView
                 android:id="@+id/btn_update"
                 android:layout_width="wrap_content"
@@ -61,7 +68,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
                 android:layout_margin="10dp"
-                android:src="@drawable/ic_refresh"/>
+                android:src="@drawable/ic_refresh" />
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
