--- a/app/src/main/res/layout/child_item.xml
+++ b/app/src/main/res/layout/child_item.xml
@@ -15,15 +15,16 @@
         android:maxLines="1"
         android:ellipsize="end"
         android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="15dp"
+        android:layout_marginHorizontal="25dp"
         android:layout_toStartOf="@+id/txt_money"
         tools:ignore="HardcodedText" />
+
     <TextView
         android:id="@+id/txt_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/txt_date"
-        android:layout_alignBottom="@+id/txt_date"
+        android:layout_alignTop="@+id/txt_bill_id"
+        android:layout_alignBottom="@+id/txt_bill_id"
         android:layout_marginEnd="5dp"
         android:layout_toStartOf="@+id/vnd"
         android:ellipsize="end"
@@ -36,8 +37,8 @@
         android:id="@+id/vnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/txt_date"
-        android:layout_alignBottom="@+id/txt_date"
+        android:layout_alignTop="@+id/txt_bill_id"
+        android:layout_alignBottom="@+id/txt_bill_id"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="15dp"
         android:ellipsize="end"
