--- a/app/src/main/res/layout/parent_item.xml
+++ b/app/src/main/res/layout/parent_item.xml
@@ -13,15 +13,6 @@
         android:maxLines="1"
         android:ellipsize="end"
         android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_toStartOf="@+id/icon"/>
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_arrow_down"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/txt_date"
-        android:layout_alignBottom="@+id/txt_date"
-        android:layout_marginHorizontal="10dp"/>
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="15dp"/>
 </RelativeLayout>
