--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,13 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/dark_primary</item>
         <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
     </style>
+
+    <style name="Theme.DrugStoreManagement.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.DrugStoreManagement.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.DrugStoreManagement.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
