--- a/app/src/main/res/layout/app_bar_content.xml
+++ b/app/src/main/res/layout/app_bar_content.xml
@@ -9,14 +9,14 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.DrugStoreManagement.AppBarOverlay">
+        app:elevation="0dp">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.DrugStoreManagement.PopupOverlay" />
+            android:background="@color/background"
+            app:titleTextColor="@color/dark_text"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
