--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
     
     <style name="MyEditText" parent="Widget.AppCompat.EditText">
-        <item name="backgroundTint">@color/dark_icon</item>
+        <item name="backgroundTint">@color/light_card</item>
         <item name="android:maxLines">1</item>
         <item name="android:inputType">text</item>
         <item name="android:ellipsize">end</item>
@@ -29,6 +29,10 @@
     </style>
 
 
+    <style name="SmallText" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">@dimen/text_small</item>
+        <item name="android:textColor">@color/small_text</item>
+    </style>
     <style name="NormalText" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">@dimen/text_normal</item>
         <item name="android:textColor">@color/normal_text</item>
@@ -53,7 +57,8 @@
     
     <style name="MySearchBox" parent="CardView">
         <item name="cardBackgroundColor">@color/light_card</item>
-        <item name="cardCornerRadius">28dp</item>
-        <item name="contentPadding">10dp</item>
+        <item name="cardCornerRadius">22dp</item>
+        <item name="contentPadding">2dp</item>
+        <item name="cardElevation">0dp</item>
     </style>
 </resources>
