--- a/app/src/main/res/layout/fragment_drugstore.xml
+++ b/app/src/main/res/layout/fragment_drugstore.xml
@@ -42,6 +42,18 @@
 
         </androidx.cardview.widget.CardView>
 
+        <com.nex3z.flowlayout.FlowLayout
+            android:id="@+id/history_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="10dp"
+            app:flChildSpacingForLastRow="align"
+            app:flMaxRows="2"
+            app:flRowSpacing="8dp">
+
+        </com.nex3z.flowlayout.FlowLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
