--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,15 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="SmallImageButton" parent="Widget.AppCompat.ImageButton">
+        <item name="android:background">@drawable/round_card_background</item>
+        <item name="android:padding">5dp</item>
+    </style>
+    <style name="LargeImageButton" parent="Widget.AppCompat.ImageButton">
+        <item name="android:background">@drawable/round_card_background</item>
+        <item name="android:padding">10dp</item>
+    </style>
+
     <style name="ZoomAnimation">
         <item name="android:windowEnterAnimation">@anim/anim_dialog_show</item>
         <item name="android:windowExitAnimation">@anim/anim_dialog_dismiss</item>
