--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -15,7 +15,7 @@
             android:id="@+id/img_splash"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/splash"/>
+            android:src="@drawable/img"/>
         <TextView
             android:id="@+id/txt1"
             android:layout_width="200dp"
