--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -18,11 +18,13 @@
             android:layout_marginVertical="15dp"
             android:layout_marginHorizontal="40dp"
             android:background="@drawable/spinner_background">
+
             <Spinner
                 android:id="@+id/spinner"
+                style="@style/MySpinner"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/MySpinner" />
+                android:layout_height="wrap_content" />
+
             <ImageView
                 android:layout_width="10dp"
                 android:layout_height="10dp"
